# free_fleet_ros2

./: CMakeLists.txt  README.md  package.xml
adapter/: CMakeLists.txt  package.xml
adapter/src/: main.cpp  manager_standalone.cpp
client/: CMakeLists.txt  package.xml
client/src/: SlotcarCommandHandle.cpp  SlotcarCommandHandle.hpp  SlotcarStatusHandle.cpp  SlotcarStatusHandle.hpp  main.cpp
examples/: CMakeLists.txt  package.xml
examples/launch/: hotel_clients.launch.xml  office_clients.launch.xml
free_fleet_ros2/: CMakeLists.txt  package.xml
free_fleet_ros2/include/free_fleet_ros2/client/: Nav2Handler.hpp
free_fleet_ros2/old_include/free_fleet_ros2/client/: RobotHandler.hpp  StateMonitor.hpp
free_fleet_ros2/old_src/client/: StateMonitor.cpp
free_fleet_ros2/old_src/rmf_adapter/: load_param.hpp
free_fleet_ros2/src/client/: Nav2Handler.cpp  StateMonitor.cpp  StateMonitor.hpp  main.cpp
free_fleet_ros2/src/rmf_adapter/: traffic_light.cpp
launch/: minimal_server_tb3.launch.xml
src/: MinimalServer.cpp
src/rmf_adapter/: full_control.cpp  full_control.hpp  load_param.cpp
